# timesync

./: CMakeLists.txt  Dockerfile  README
lcmtypes/: .gitignore  erlcm_timesync_t.lcm  ripl_timesync_t.lcm  timesync_ping_t.lcm
scripts/: run-docker.sh  run-timesync.sh
service/: Makefile  README  timesync  timesync-logrotate  usr-local-bin-timesync-wrapper
src/: CMakeLists.txt  README  main.c
